Offers, Categories & Users

--- a/markup/src/index.html
+++ b/markup/src/index.html
@@ -29,14 +29,7 @@
 	</main>
 	<!--/Content Main-->	
 	<!--Footer Main-->		
-	<footer class="footer--main clearfix">
-		<div class="footer--copyrights">
-			© 2019 LocalFirst All rights reserved.
-		</div>
-		<div class="footer--development">
-			Design and Developed by <a class="footer--logo_devensis" href="#"></a>
-		</div>
-	</footer>
-	<!--/Footer Main-->
+	@@include('./_footer.html')
+	<!--/Footer Main-->		
 </body>
 </html>
