--- a/markup/src/offeradd.html
+++ b/markup/src/offeradd.html
@@ -39,18 +39,12 @@
 	<!--Content Main-->
 	<main class="content--main">
 		<section class="breadcrumbs">
-			<a href="offers.html">Offers</a> <span>/</span> Holliday Sale!!!
-		</section>
-		<section class="page--menu clearfix">
-			<ul class="cell--editor_menu">
-				<li>
-    			<button class="btns delete_btn" data-toggle="class" data-target="#popups" data-classes="offerdelete">
-    				<svg class="icons icons40x40">
-							<use xlink:href="#delete"></use>
-						</svg>
-					</button>
-				</li>
-			</ul>			
+			<a href="offers.html">Offers</a> <span>/</span> <a href="newoffer.html">EDIT offer</a>
+			<button class="btns delete_btn" data-toggle="class" data-target="#popups" data-classes="offerdelete">
+				<svg class="icons icons40x40">
+					<use xlink:href="#delete"></use>
+				</svg>
+			</button>
 		</section>
 		<section class="offer--edit section--content">
 			<form class="form--default">
