--- a/markup/src/offers.html
+++ b/markup/src/offers.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>LocalFirst Offers</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/extra.css">
 </head>
 <body>
 	<!--SVG Sprite-->
@@ -190,7 +191,7 @@
 		  		</div>
 		  		<div class="table--list_body">
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -215,7 +216,7 @@
 			    		</div>		    						    		
 			    	</div>
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF «PENNY» </a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -240,7 +241,7 @@
 			    		</div>		    						    		
 			    	</div>	
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF «PENNY»  OUT 2.0</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF «PENNY»  OUT 2.0</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -265,7 +266,7 @@
 			    		</div>		    						    		
 			    	</div>
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday !!! 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday !!! 60% OFF «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -290,7 +291,7 @@
 			    		</div>		    						    		
 			    	</div>	
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF  BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF  BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -315,7 +316,7 @@
 			    		</div>		    						    		
 			    	</div>
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -340,7 +341,7 @@
 			    		</div>		    						    		
 			    	</div>	
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!!  «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!!  «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -365,7 +366,7 @@
 			    		</div>		    						    		
 			    	</div>
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -390,7 +391,7 @@
 			    		</div>		    						    		
 			    	</div>	
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -415,7 +416,7 @@
 			    		</div>		    						    		
 			    	</div>
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title"> 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html"> 60% OFF «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -440,7 +441,7 @@
 			    		</div>		    						    		
 			    	</div>	
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -465,7 +466,7 @@
 			    		</div>		    						    		
 			    	</div>
 			    	<div class="table--list_row offers--table_offer">
-			    		<div class="table--list_cell cell_title">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</div>
+			    		<div class="table--list_cell cell_title"><a href="offer.html">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</a></div>
 			    		<div class="table--list_cell cell_type">Local business</div>
 			    		<div class="table--list_cell cell_duration">01/10 - 31/12</div>
 			    		<div class="table--list_cell cell_company">Best Business Name</div>
@@ -496,69 +497,13 @@
 	</main>
 	<!--/Content Main-->
 	<!--Sidebar Main-->	
-	<aside class="sidebar--main">
-		<div class="sidebar--logo">
-			<a class="btns" href="index.html" title="home"><i class="logo"></i></a>
-		</div>
-		<ul class="sidebar--menu">
-			<li>
-				<a class="btns" href="users.html" title="Users">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#users"></use>
-					</svg>
-				</a>
-			</li>
-			<li class="active">
-				<a class="btns" href="offers.html" title="Offers">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#offers"></use>
-					</svg>					
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="stats.html" title="Stats">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#stats"></use>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="reports.html" title="Reports">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#reports"></use>
-					</svg>
-				</a>
-				<span>!</span>
-			</li>
-			<li>
-				<a class="btns" href="services.html" title="Services">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#services"></use>
-					</svg>
-				</a>
-			</li>
-			<li class="separator">
-			</li>
-			<li>
-				<a class="btns" href="#" title="Logout">
-					<svg class="icons icons48x48 logout">
-					  <use xlink:href="#logout"></use>
-					</svg>				
-				</a>
-			</li>
-		</ul> 
-	</aside>
+	@@include('./_sidebar.html',{
+		'offers': 'active'
+	})
 	<!--/Sidebar Main-->	
 	<!--Footer Main-->		
-	<footer class="footer--main clearfix">
-		<div class="footer--copyrights">
-			© 2019 LocalFirst All rights reserved.
-		</div>
-		<div class="footer--development">
-			Design and Developed by <a class="footer--logo_devensis" href="#"></a>
-		</div>
-	</footer>
-	<!--/Footer Main-->
+	@@include('./_footer.html')
+	<!--/Footer Main-->	
 	<!--Popups-->
 	<section id="popups" class="popup--main">
 		<div class="popup_overlay"></div>
