--- a/markup/src/stats.html
+++ b/markup/src/stats.html
@@ -148,68 +148,12 @@
 	</main>
 	<!--/Content Main-->
 	<!--Sidebar Main-->	
-	<aside class="sidebar--main">
-		<div class="sidebar--logo">
-			<a class="btns" href="index.html" title="home"><i class="logo"></i></a>
-		</div>
-		<ul class="sidebar--menu">
-			<li>
-				<a class="btns" href="users.html" title="Users">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#users"></use>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="offers.html" title="Offers">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#offers"></use>
-					</svg>					
-				</a>
-			</li>
-			<li class="active">
-				<a class="btns" href="stats.html" title="Stats">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#stats"></use>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="reports.html" title="Reports">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#reports"></use>
-					</svg>
-				</a>
-				<span>!</span>
-			</li>
-			<li>
-				<a class="btns" href="services.html" title="Services">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#services"></use>
-					</svg>
-				</a>
-			</li>
-			<li class="separator">
-			</li>
-			<li>
-				<a class="btns" href="#" title="Logout">
-					<svg class="icons icons48x48 logout">
-					  <use xlink:href="#logout"></use>
-					</svg>				
-				</a>
-			</li>
-		</ul> 
-	</aside>
+	@@include('./_sidebar.html',{
+		'stats': 'active'
+	})
 	<!--/Sidebar Main-->	
 	<!--Footer Main-->		
-	<footer class="footer--main clearfix">
-		<div class="footer--copyrights">
-			© 2019 LocalFirst All rights reserved.
-		</div>
-		<div class="footer--development">
-			Design and Developed by <a class="footer--logo_devensis" href="#"></a>
-		</div>
-	</footer>
+	@@include('./_footer.html')
 	<!--/Footer Main-->		
 	<!--Scripts-->	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
