--- a/markup/src/offer.html
+++ b/markup/src/offer.html
@@ -30,6 +30,10 @@
 	    <path  d="M11.08 12.59L13.67 10H4V8h9.67l-2.59-2.59L12.5 4l5 5-5 5-1.42-1.41zM16 0a2 2 0 0 1 2 2v4.67l-2-2V2H2v14h14v-2.67l2-2V16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2C0 .89.89 0 2 0h14z"></path>
 	  </symbol>	
 	  <!--IconsSideBar-->	
+	  <symbol viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" id="edit">
+	    <title>F10563FC-FDE4-4468-9455-B685DC5959EC</title>
+	    <path fill-rule="evenodd" d="M28.71 15.043c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83zM11 25.253v3.75h3.75l11.06-11.07-3.75-3.75L11 25.252z"></path>
+	  </symbol>
 	  <symbol viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" id="delete">
 	    <title>ACB6416B-36A8-4769-8C75-7D6F932FB1E9</title>
 	    <path fill-rule="evenodd" d="M14 27a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V15H14v12zm2.46-7.12l1.41-1.41L20 20.59l2.12-2.12 1.41 1.41L21.41 22l2.12 2.12-1.41 1.41L20 23.41l-2.12 2.12-1.41-1.41L18.59 22l-2.13-2.12zM23.5 12l-1-1h-5l-1 1H13v2h14v-2h-3.5z"></path>
@@ -50,53 +54,56 @@
 						</svg>
 					</button>
 				</li>
+				<li>
+					<a href="offeredit.html" class="btns edit_btn">
+						<svg class="icons icons40x40">
+							<use xlink:href="#edit"></use>
+						</svg>
+					</a>
+				</li>
 			</ul>			
 		</section>
-		<section class="offer--edit section--content">
-			<form class="form--default">
-				<header class="offer--edit_header">
-					<figure class="offer--edit_header-image">
-						<img ssrc="img/offer.jpg" srcset="img/offer@2x.jpg 2x, img/offer@3x.jpg 3x" alt="Offer">
-					</figure>
-					<div class="offer--edit_header-text">
-						<button class="btns add-photo_btn">add PHOTO</button>
-						<button class="btns delete-photo_btn">DELETE PHOTO</button>
+		<section class="offer--view section--content">
+			<header class="offer--view_header">
+				<figure class="offer--view_header-image">
+					<img ssrc="img/offer.jpg" srcset="img/offer@2x.jpg 2x, img/offer@3x.jpg 3x" alt="Offer">
+				</figure>
+			</header>
+			<div class="offer--view_content">
+					<div class="view--label">
+						Title for the advert
 					</div>
-				</header>
-				<div class="offer--edit_content">
-					<div class="form--column">
-						<div class="form--row">
-							<label class="form--label" for="offertitle">Choose type of business</label>
-							<input class="form--radio" id="offertype-b" type="radio" name="offertype" value="business" >
-							<label class="form--radio_label" for="offertype-b">Local business</label>
-						</div>
-						<div class="form--row">
-							<input class="form--radio" id="offertype-e" type="radio" name="offertype" value="entertaiment">
-							<label class="form--radio_label" for="offertype-e">Local entertaiment</label>
-						</div>
-						<div class="form--row">
-							<label class="form--label" for="offertitle">Title for the advert</label>
-							<textarea class="form--input" id="offertitle" type="text" name="offertitle" placeholder="">Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</textarea>
-						</div>
-						<div class="form--row">
-							<label class="form--label" for="offerduration">Duration</label>
-							<input class="form--input datepicker-here" data-range="true" id="offerduration" type="text" name="offerduration" value="11/12/2019" placeholder=""/>
-						</div>
-						<div class="form--row">
-							<label class="form--label" for="offerprice">Prise</label>
-							<input class="form--input"  id="offerprice" type="text" name="offerprice" value="2,500 - 2,589 €" placeholder=""/>
-						</div>
-						<div class="form--row">
-							<label class="form--label" for="offertitle">Enter description</label>
-							<textarea rows="10" class="form--input" id="offertitle" type="text" name="offertitle" placeholder="">We strive everyday to offer you the customer the best service by staying up to date with the latest in Bmx and Skate technology by knowing what parts fit together or where to source a certain part which we may not usually stock, will we try our hardest to find you what you need and provide that at the best price we can.</textarea>
-						</div>
+					<div class="view--text">
+						<p>Local business</p>
 					</div>
-					<div class="form--row form--row_submit">
-						<buttons class="btns reset_btn">CANCEL</buttons>
-						<buttons class="btns submit_btn">SAVE CHANGES</buttons>
+					<div class="view--label">
+						Title for the advert
+					</div>
+					<div class="view--text">
+						<p>Holliday Sale!!! 60% OFF «PENNY» BLACK OUT 2.0 27"</p>
+					</div>
+					<div class="view--label">
+						Duration
+					</div>
+					<div class="view--text">
+						<p>11/12/2019</p>
+					</div>
+					<div class="view--label">
+						Prise
+					</div>
+					<div class="view--text">
+						<p>2,500 - 2,589 €"</p>
+					</div>
+					<div class="view--label">
+						Вescription
+					</div>
+					<div class="view--text">
+						<p>
+							We strive everyday to offer you the customer the best service by staying up to date with the latest in Bmx and Skate technology by knowing what parts fit together or where to source a certain part which we may not usually stock, will we try our hardest to find you what you need and provide that at the best price we can.
+						</p>
 					</div>
 				</div>
-			</form>
+			</div>
 		</section>
 	</main>
 	<!--/Content Main-->
@@ -129,27 +136,7 @@
 	<!--Popups-->		
 	<!--Scripts-->	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="js/datepicker.min.js"></script>
 	<script src="js/scripts.js"></script>
-	<script type="text/javascript">
-		$.fn.datepicker.language['ru'] =  {
-	    days: ['Sunday','Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'],
-	    daysShort: ['S','M','T','W','T','F','S'],
-	    daysMin: ['S','M','T','W','T','F','S'],
-	    months: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-	    monthsShort: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
-	    today: 'Today',
-	    clear: 'Clear',
-	    dateFormat: 'dd/mm/yyyy',
-	    timeFormat: 'hh:ii',
-	    firstDay: 1
-		};
-	</script>	
-	<script>
-	  $('.datepicker-here').datepicker({
-	  	clearButton: true
-		});
-	</script>	
 	<!--Scripts-->	
 </body>
 </html>
