--- a/markup/src/useradd.html
+++ b/markup/src/useradd.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>LocalFirst New User</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/extra.css">
 </head>
 <body>
 	<!--SVG Sprite-->
@@ -21,37 +22,40 @@
 	  </symbol>
 	  <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="reports">
 	    <path  fill-rule="evenodd" d="M12 3L1 22h22M12 7l7.53 13H4.47M11 11v4h2v-4m-2 6v2h2v-2"></path>
-	  </symbol>
+	  </symbol>	  
 	  <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 20" id="services">
 	    <path d="M11 2v16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2zM2 8v4h7V8H2zm0 6v4h7v-4H2zM2 2v4h7V2H2zm11 7h3V6h2v3h3v2h-3v3h-2v-3h-3V9z"></path>
-	  </symbol>	  
+	  </symbol>
 	  <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" id="logout">
 	    <path  d="M11.08 12.59L13.67 10H4V8h9.67l-2.59-2.59L12.5 4l5 5-5 5-1.42-1.41zM16 0a2 2 0 0 1 2 2v4.67l-2-2V2H2v14h14v-2.67l2-2V16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2C0 .89.89 0 2 0h14z"></path>
 	  </symbol>	
-	  <!--IconsSideBar-->	      	  	  	  	  
+	  <!--IconsSideBar-->	
+	  <symbol viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" id="delete">
+	    <title>ACB6416B-36A8-4769-8C75-7D6F932FB1E9</title>
+	    <path fill-rule="evenodd" d="M14 27a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V15H14v12zm2.46-7.12l1.41-1.41L20 20.59l2.12-2.12 1.41 1.41L21.41 22l2.12 2.12-1.41 1.41L20 23.41l-2.12 2.12-1.41-1.41L18.59 22l-2.13-2.12zM23.5 12l-1-1h-5l-1 1H13v2h14v-2h-3.5z"></path>
+	  </symbol>    	  	  	  	  
 	</svg>
 	<!--SVG Sprite-->
 	<!--Content Main-->
 	<main class="content--main">
 		<section class="breadcrumbs">
-			<a href="users.html">Users</a> <span>/</span> <a href="newuser.html">CREATING NEW USER</a>
+			<a href="users.html">Users</a> <span>/</span> ADD USER
 		</section>
-		<section class="user--new section--content">
+		<section class="user--edit section--content">
 			<form class="form--default">
-				<header class="user--new_header">
-					<figure class="user--new_header-image">
-						<!-- <img ssrc="img/noavatar.png" srcset="img/noavatar@2x.png 2x, img/noavatar@3x.png 3x" alt="Avatar"> -->
+				<header class="user--edit_header">
+					<figure class="user--edit_header-image">
+						<img ssrc="img/avatar_placeholder.png" srcset="img/avatar_placeholder@2x.png 2x, img/avatar_placeholder@3x.png 3x" alt="Avatar">
 					</figure>
-					<div class="user--new_header-text">
+					<div class="user--edit_header-text">
 						<button class="btns add-photo_btn">add PHOTO</button>
-						<button class="btns delete-photo_btn">DELETE PHOTO</button>
 					</div>
 				</header>
-				<div class="user--new_content">
+				<div class="user--edit_content">
 					<div class="form--column">
 						<h2 class="form--title2">ACCOUNT</h2>
 						<div class="form--row">
-							<label class="form--label" for="businessname">Business Name</label>
+							<label class="form--label" for="businessname">COMPANY/TRADING NAME</label>
 							<input class="form--input" id="businessname" type="text" name="businessname" value="" placeholder="">
 						</div>
 						<div class="form--row">
@@ -63,27 +67,55 @@
 							<input class="form--input" id="useremail" type="email" name="useremail" value="" placeholder="">
 						</div>
 						<div class="form--row">
-							<label class="form--label" for="companyname">Company name</label>
-							<input class="form--input" id="companyname" type="text" name="companyname" value="" placeholder="">
+							<label class="form--label" for="businessaddress">BUSINESS ADDRESS</label>
+							<input class="form--input" id="businessaddress" type="text" name="businessaddress" value="" placeholder="">
+						</div>
+						<div class="form--row">
+							<label class="form--label" for="eircode">EIRCODE</label>
+							<input class="form--input" id="eircode" type="text" name="eircode" value="" placeholder="">
+						</div>
+						<div class="form--row">
+							<label class="form--label" for="url">WEBSITE</label>
+							<input class="form--input" id="url" type="text" name="url" value="" placeholder="">
+						</div>
+						<div class="form--row">
+							<label class="form--label" for="sdescription">A SHORT DESCRIPTION OF YOUR BUSINESS</label>
+							<input class="form--input" id="sdescription" type="text" name="sdescription" value="" placeholder="">
+						</div>
+						<div class="form--row">
+							<label class="form--label" for="servicetypes">SERVICE TYPES</label>
+							<input class="form--input" id="servicetypes" type="text" name="servicetypes" value="" placeholder="">
 						</div>
 					</div>
 					<div class="form--column">
-						<h2 class="form--title2">&nbsp;</h2>
+						<h2 class="form--title2">BILLING INFORMATION</h2>
 						<div class="form--row">
-							<label class="form--label" for="billingaddress">Billing address</label>
-							<input class="form--input" id="billingaddress" type="text" name="billingaddress" value="" placeholder="">
+							<label class="form--label" for="regnumber">COMPANY/ORGANISATION REGISTRATION NUMBER</label>
+							<input class="form--input" id="regnumber" type="text" name="regnumber" value="" placeholder="">
 						</div>
 						<div class="form--row">
 							<label class="form--label" for="numbers">VAT number/ CRO number</label>
 							<input class="form--input" id="numbers" type="text" name="numbers" value="" placeholder="">
 						</div>
 						<div class="form--row">
-							<label class="form--label" for="companyid">Company ID</label>
-							<input class="form--input" id="companyid" type="text" name="companyid" value="" placeholder="">
+							<label class="form--label" for="contactname">CONTACT NAME</label>
+							<input class="form--input" id="contactname" type="text" name="contactname" value="" placeholder="">
 						</div>
 						<div class="form--row">
-							<label class="form--label" for="companyabout">About the Company</label>
-							<input class="form--input" id="companyabout" type="text" name="companyabout" value="" placeholder="">
+							<label class="form--label" for="contactphone">CONTACT PHONE NUMBER</label>
+							<input class="form--input" id="contactphone" type="text" name="contactphone" value="" placeholder="">
+						</div>
+						<div class="form--row">
+							<label class="form--label" for="contactemail">CONTACT EMAIL ADDRESS</label>
+							<input class="form--input" id="contactemail" type="text" name="contactemail" value="" placeholder="">
+						</div>
+						<div class="form--row">
+							<label class="form--label" for="billingaddress">Billing address</label>
+							<input class="form--input" id="billingaddress" type="text" name="billingaddress" value="" placeholder="">
+						</div>
+						<div class="form--row">
+							<label class="form--label" for="billingeircode">BILLING EIRCODE</label>
+							<input class="form--input" id="billingeircode" type="text" name="billingeircode" value="" placeholder="">
 						</div>
 					</div>
 					<div class="form--column">
@@ -99,7 +131,7 @@
 					</div>
 					<div class="form--row form--row_submit">
 						<buttons class="btns reset_btn">CANCEL</buttons>
-						<buttons class="btns submit_btn">Add new user</buttons>
+						<buttons class="btns submit_btn">SAVE CHANGES</buttons>
 					</div>
 				</div>
 			</form>
@@ -107,69 +139,32 @@
 	</main>
 	<!--/Content Main-->
 	<!--Sidebar Main-->	
-	<aside class="sidebar--main">
-		<div class="sidebar--logo">
-			<a class="btns" href="index.html" title="home"><i class="logo"></i></a>
-		</div>
-		<ul class="sidebar--menu">
-			<li class="active">
-				<a class="btns" href="users.html" title="Users">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#users"></use>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="offers.html" title="Offers">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#offers"></use>
-					</svg>					
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="stats.html" title="Stats">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#stats"></use>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="reports.html" title="Reports">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#reports"></use>
-					</svg>
-				</a>
-				<span>!</span>
-			</li>
-			<li>
-				<a class="btns" href="services.html" title="Services">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#services"></use>
-					</svg>
-				</a>
-			</li>
-			<li class="separator">
-			</li>
-			<li>
-				<a class="btns" href="#" title="Logout">
-					<svg class="icons icons48x48 logout">
-					  <use xlink:href="#logout"></use>
-					</svg>				
-				</a>
-			</li>
-		</ul> 
-	</aside>
-	<!--/Sidebar Main-->
+	@@include('./_sidebar.html',{
+		'users': 'active'
+	})
+	<!--/Sidebar Main-->	
 	<!--Footer Main-->		
-	<footer class="footer--main clearfix">
-		<div class="footer--copyrights">
-			© 2019 LocalFirst All rights reserved.
-		</div>
-		<div class="footer--development">
-			Design and Developed by <a class="footer--logo_devensis" href="#"></a>
-		</div>
-	</footer>
+	@@include('./_footer.html')
 	<!--/Footer Main-->		
+	<!--Popups-->
+	<section id="popups" class="popup--main">
+		<div class="popup_overlay"></div>
+		<div class="popup_block popup--userdelete">
+			<div class="popup--title">
+				Are you sure to delete user
+			</div>
+			<form class="form--default">
+				<div class="popup--content text warning">
+					Thakurjeet Bharwana?
+				</div>
+				<div class="form--row form--row_submit">
+					<buttons class="btns reset_btn" data-toggle="class" data-target="#popups" data-classes="userdelete">CANCEL</buttons>
+					<buttons class="btns delete_btn">DELeTE</buttons>
+				</div>
+			</form>
+		</div>
+	</section>
+	<!--Popups-->		
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
