--- a/markup/src/users.html
+++ b/markup/src/users.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>LocalFirst Users</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/extra.css">
 </head>
 <body>
 	<!--SVG Sprite-->
@@ -192,7 +193,7 @@
 		    	</div>
 		    	<div class="table--list_body">
 			    	<div class="table--list_row">
-			    		<div class="table--list_cell cell_user">Lew Silverton</div>
+			    		<div class="table--list_cell cell_user"><a href="user.html">Lew Silverton</a></div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
 			    		<div class="table--list_cell cell_number">12345678901</div>
@@ -218,7 +219,7 @@
 			    	</div>
 			    	<div class="table--list_row">
 			    		<div class="table--list_cell cell_user">
-			    			Lew Silverton
+			    			<a href="user.html">Lew Silverton</a>
 			    		</div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
@@ -244,7 +245,7 @@
 			    		</div>
 			    	</div>
 			    	<div class="table--list_row">
-			    		<div class="table--list_cell cell_user">Lew Silverton</div>
+			    		<div class="table--list_cell cell_user"><a href="user.html">Lew Silverton</a></div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
 			    		<div class="table--list_cell cell_number">12345678901</div>
@@ -269,7 +270,7 @@
 			    		</div>
 			    	</div>
 			    	<div class="table--list_row">
-			    		<div class="table--list_cell cell_user">Lew Silverton</div>
+			    		<div class="table--list_cell cell_user"><a href="user.html">Lew Silverton</a></div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
 			    		<div class="table--list_cell cell_number">12345678901</div>
@@ -294,7 +295,7 @@
 			    		</div>
 			    	</div>
 			    	<div class="table--list_row">
-			    		<div class="table--list_cell cell_user">Lew Silverton</div>
+			    		<div class="table--list_cell cell_user"><a href="user.html">Lew Silverton</a></div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
 			    		<div class="table--list_cell cell_number">12345678901</div>
@@ -319,7 +320,7 @@
 			    		</div>
 			    	</div>
 			    	<div class="table--list_row">
-			    		<div class="table--list_cell cell_user">Lew Silverton</div>
+			    		<div class="table--list_cell cell_user"><a href="user.html">Lew Silverton</a></div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
 			    		<div class="table--list_cell cell_number">12345678901</div>
@@ -344,7 +345,7 @@
 			    		</div>
 			    	</div>
 			    	<div class="table--list_row">
-			    		<div class="table--list_cell cell_user">Lew Silverton</div>
+			    		<div class="table--list_cell cell_user"><a href="user.html">Lew Silverton</a></div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
 			    		<div class="table--list_cell cell_number">12345678901</div>
@@ -369,7 +370,7 @@
 			    		</div>
 			    	</div>
 			    	<div class="table--list_row">
-			    		<div class="table--list_cell cell_user">Lew Silverton</div>
+			    		<div class="table--list_cell cell_user"><a href="user.html">Lew Silverton</a></div>
 			    		<div class="table--list_cell cell_business">GP divainee</div>
 			    		<div class="table--list_cell cell_company">Londonderry</div>
 			    		<div class="table--list_cell cell_number">12345678901</div>
@@ -498,69 +499,13 @@
 	</main>
 	<!--/Content Main-->
 	<!--Sidebar Main-->	
-	<aside class="sidebar--main">
-		<div class="sidebar--logo">
-			<a class="btns" href="index.html" title="home"><i class="logo"></i></a>
-		</div>
-		<ul class="sidebar--menu">
-			<li class="active">
-				<a class="btns" href="users.html" title="Users">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#users"></use>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="offers.html" title="Offers">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#offers"></use>
-					</svg>					
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="stats.html" title="Stats">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#stats"></use>
-					</svg>
-				</a>
-			</li>
-			<li>
-				<a class="btns" href="reports.html" title="Reports">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#reports"></use>
-					</svg>
-				</a>
-				<span>!</span>
-			</li>
-			<li>
-				<a class="btns" href="services.html" title="Services">
-					<svg class="icons icons48x48">
-					  <use xlink:href="#services"></use>
-					</svg>
-				</a>
-			</li>
-			<li class="separator">
-			</li>
-			<li>
-				<a class="btns" href="#" title="Logout">
-					<svg class="icons icons48x48 logout">
-					  <use xlink:href="#logout"></use>
-					</svg>				
-				</a>
-			</li>
-		</ul> 
-	</aside>
+	@@include('./_sidebar.html',{
+		'users': 'active'
+	})
 	<!--/Sidebar Main-->	
 	<!--Footer Main-->		
-	<footer class="footer--main clearfix">
-		<div class="footer--copyrights">
-			© 2019 LocalFirst All rights reserved.
-		</div>
-		<div class="footer--development">
-			Design and Developed by <a class="footer--logo_devensis" href="#"></a>
-		</div>
-	</footer>
-	<!--/Footer Main-->
+	@@include('./_footer.html')
+	<!--/Footer Main-->	
 	<!--Popups-->
 	<section id="popups" class="popup--main">
 		<div class="popup_overlay"></div>
